# s2m-fitness-monorepo

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  repomix-output.xml  requirements.txt
backend/: database.py  main.py  models.py
backend/routes/: food.py  user.py
backend/services/: clarification.py  edamam_service.py  food_parser.py  intent_classifier.py  lookup_test.py  nutrition_service.py  query_match_rank.py  transcriber.py  tts_service.py
docs/: voice-flow.md
frontend/: jest.config.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/__tests__/: foodName.test.ts  speak.test.ts
frontend/e2e/: load-env.ts  log-food.spec.ts
frontend/lib/: bargeIn.ts  foodName.ts  speak.ts  supabaseClient.ts
frontend/pages/: _app.js  demo.tsx  index.js  index.tsx  login.tsx
frontend/public/: manifest.json  service-worker.js
frontend/styles/: Home.module.css  globals.css
scripts/: branded_clean_test.json  embed_foods.py  embed_foods_test.py  embed_sr_legacy.py  patch_missing.py  process_branded.py  process_branded_test.py  process_sr_legacy.py
scripts/investigations/: verify_confidence_bypass.py  verify_length_bias.py  verify_plural_generalization.py  (+1 more)
tests/: conftest.py  eval_food_parser.py  test_brand_name_dedupe.py  test_brand_name_dedupe_live.py  test_clarification.py  test_food_parser.py  test_food_parser_unit.py  test_food_routes.py  test_format_branded_name.py  test_intent_classifier.py  test_nutrition_atwater.py  test_query_match_rank.py  test_serving_size_sanitize.py
(+1 files in other folders)
